--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,8 @@ dependencies {
 	testAnnotationProcessor 'org.projectlombok:lombok'
 
 	//커스텀 라이브러리
-	implementation files('libs/memory-0.0.1.jar')
+//	implementation files('libs/memory-0.0.1.jar')
+	implementation files('libs/memoryV2.jar')
 }
 
 tasks.named('test') {
