feat: 스프링 환경 설정 우선순위1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=boot
+url=local.db.com
+username=local_user
+password=local_pw
+#---
 spring.config.activate.on-profile=dev
 url=dev.db.com
 username=dev_user
