--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ my.datasource.password=local_pw
 my.datasource.etc.max-connection=1
 my.datasource.etc.timeout=3500ms
 my.datasource.etc.options=CACHE,ADMIN
+#---
+spring.main.allow-bean-definition-overriding=true
