--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 management:
   endpoint:
-    shutdown:
-      enabled: true
-  endpoints:
-    web:
-      exposure:
-        include: "*"
+#    shutdown:
+#      enabled: false
+    health:
+      show-details: always
+#  endpoints:
+#    web:
+#      exposure:
+#        include: "*"
