fix: 엔드포인트 info 로 애플리케이션 정보 확인

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.5'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id "com.gorylenko.gradle-git-properties" version "2.4.1"
 }
 
 group = 'com'
@@ -43,4 +44,8 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+springBoot {
+	buildInfo()
 }
