--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,23 @@
 management:
+  info:
+    java:
+      enabled: true
+    os:
+      enabled: true
+    env:
+      enabled: true
   endpoint:
-#    shutdown:
-#      enabled: false
+    shutdown:
+      enabled: true
     health:
-      show-details: always
-#  endpoints:
-#    web:
-#      exposure:
-#        include: "*"
+#      show-details: always
+      show-components: always
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+info:
+  app:
+    name: hello-actuator
+    company: yh
